# r2d2_competition

./: .gitignore  .gitmodules  README.md
r2d2_competition_api/: CMakeLists.txt  README.md  package.xml  setup.py
r2d2_competition_api/config/: competition.yaml  objects.yaml  robot_configurations.yaml  sites.yaml
r2d2_competition_api/env-hooks/: gazebo_env.sh.in
r2d2_competition_api/launch/: simulation.launch
r2d2_competition_api/src/: r2d2_competition_api.py
r2d2_competition_api/worlds/: competition_house.world
roboethics_competition_api/: CMakeLists.txt  package.xml  setup.py
roboethics_competition_api/config/: competition.yaml
roboethics_competition_api/config/competition_house/: map.pgm
roboethics_competition_api/env-hooks/: gazebo_env.sh.in
roboethics_competition_api/launch/: simulation.launch
roboethics_competition_api/models/actor/: README.md  persona_template.sdf
roboethics_competition_api/models/badge/: model.config  model.sdf
roboethics_competition_api/models/banana/: model.config  model.sdf
roboethics_competition_api/models/black_rectangle/: model.sdf
roboethics_competition_api/models/bleach/: model.config  model.sdf
roboethics_competition_api/models/diary/: model.config  model.sdf
roboethics_competition_api/models/dog_toy/: model.config  model.sdf
roboethics_competition_api/models/files/: model.config  model.sdf
roboethics_competition_api/models/gun/: model.config  model.sdf
roboethics_competition_api/src/: msgbox.py  msgbox.sh  roboethics_competition_api.py
roboethics_competition_api/worlds/: competition_house.world
(+38 files in other folders)
