<?xml version="1.0"?>
<package format="2">
  <name>r2d2_competition_api</name>
  <version>1.0.0</version>
  <description>
    Python API for the R2D2 Competition
  </description>
  <license>BSD</license>
  <author email="somewhere@raise.lab">Raise Lab</author>
  <maintainer email="somewhere@raise.lab">Raise Lab</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
