<?xml version="1.0"?>
<package format="2">
  <name>roboethics_competition_api</name>
  <version>1.0.0</version>
  <description>
    Python API for the Roboethics Competition
  </description>
  <license>BSD</license>
  <author email="somewhere@raise.lab">Raise Lab</author>
  <maintainer email="somewhere@raise.lab">Raise Lab</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
